
?? ??? 2007 - 2.2.0-trunk
-------------------------

 * Enhanced debug log output to log macro expansion, quote values and
   correctly display values that contained NULs.

 * Removed support for %0 - %9 capture macros as they were incorrectly
   expanding url encoded values.  Use %{TX.0} - %{TX.9} instead.
	
 * Added t:length to transform a value to its character length.

 * Added t:trimLeft, t:trimRight, t:trim to remove whitespace
   from a value on the left, right or both.

 * Added SecAuditLog2 directive to allow redundent concurrent audit log
   index files.  This will allow sending audit data to two consoles, etc.

 * Removed CGI style HTTP_* variables in favor of REQUEST_HEADERS:Header-Name.

 * Store filename/line for each rule and display it and the ID (if available)
   in the debug log when invoking a rule.  Thanks to Christian Bockermann
   for the idea.

 * Do not log 'allow' action as intercepted in the debug log.

 * Write debug log messages when "capture" is set, but the regex does not
   capture and vice-versa.

 * Small performance improvement in memory management for rule execution.

 * Fixed some collection variable names not printing with the parameter
   and/or counting operator in the debug log.


05 Apr 2007 - 2.1.1-rc2
-----------------------

 * Add the PCRE_DOLLAR_ENDONLY option when compiling regular expression
   for the @rx operator and variables.
  
 * Really set PCRE_DOTALL option when compiling the regular expression
   for the @rx operator as the docs state.


11 Mar 2007 - 2.1.1-rc1
-----------------------

 * Fixed potential memory corruption when expanding macros.

 * Fixed error when a collection var was fetched in the same second as creation
   by setting the rate to zero.

 * Fixed ASCIIZ (NUL) parsing for application/x-www-form-urlencoded forms

 * Fixed the faulty REQUEST_FILENAME variable, which used to change
   the internal Apache structures by mistake.

 * Updates to quiet some compiler warnings.
