@@ -2,6 +2,9 @@
 ?? ??? 2007 - 2.2.0-trunk
 -------------------------
 
+ * Added string comparison operators with support for macro expansion:
+   @contains, @is, @beginsWith and @endsWith.
+
  * Enhanced debug log output to log macro expansion, quote values and
    correctly display values that contained NULs.
 
